--- a/style.css
+++ b/style.css
@@ -7,28 +7,32 @@
 
 body{
     background-color: darkslategrey;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+    /* flex-direction: column; */
 }
 
 .main{
-    width: 100%;
-    /* height: 100%; */
-    /* background-color: darkslategray; */
+    width: 100%;  
     padding: 30px;
     display: flex;
-    justify-content: flex-start ;
+    justify-content: center ;
     align-items: center;
     flex-direction: column;
     gap: 20px;
-
+    /* border: 1px solid red; */
    
 }
 
+
 #question{
-    width: 400px;
+    width: 500px;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     padding: 10px;
     font-weight: bold;
+    font-style: italic;
     text-decoration: underline;
     /* border: 1px solid red   ; */
 }
@@ -65,7 +69,7 @@ body{
     /* border: 1px solid red; */
     text-align: center;
     background-color: darkslategrey;
-    padding: 15px;
+    padding: 8px;
     cursor: pointer;
  
     color: white;
@@ -92,7 +96,7 @@ body{
 }
 
 h2{
-    font-size: 30px;
+    font-size: 40px;
     color: wheat;
 }
 
@@ -135,6 +139,10 @@ h2{
     .options input {
         width: 236px;
     } 
+
+    #question{
+        font-size: 15px;
+    }
 
    
 
