--- a/style.css
+++ b/style.css
@@ -137,6 +137,19 @@ h2{
     display: none;
 }
 
+#counter{
+    /* display: inline-block; */
+    /* border: 1px solid red; */
+    background-color: red;
+    width: 40px;
+    height: 40px;
+    text-align:center;
+    display: none;
+    border-radius: 50%; 
+    font-size: 20px; 
+    padding-top: 5px;
+}
+
 @media screen and (max-width:500px) {
     .options input {
         width: 100%;
