--- a/style.css
+++ b/style.css
@@ -152,7 +152,8 @@ h2{
 
 .instruction{
     background-color: white;
-    width: 400px;
+   max-width: 400px;
+   width: 100%;
     height: 250px;
  
 }
