--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ h2{
     #question {
         width: 330px;
     }
+    .instruction{
+        height: 200px;
+    }
 
 }
 @media screen and (max-width:320px) {
