--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ h2{
     background-color: white;
    max-width: 400px;
    width: 100%;
-    height: 250px;
+    /* height: 250px; */
  
 }
 .instruction h5{
@@ -174,9 +174,9 @@ h2{
     #question {
         width: 330px;
     }
-    .instruction{
+    /* .instruction{
         height: 200px;
-    }
+    } */
 
 }
 @media screen and (max-width:320px) {
